Plugin Name: CoursePress Pro
Author:      WPMU DEV (Irene, Marcin, Philipp, Marko, Jose, Rheinard)
Build Time:  BUILDTIME

CHANGELOG
=================================================

= 2.1.6 =
-------------------------------------------------
- Fixed: Conflict with another plugins with early get_posts() function usage.
- Fixed: Problem with CoursePress version in export file.

= 2.1.5 =
-------------------------------------------------
- Fixed: Added course categories information in the export file.
- Fixed: Check MarketPress integration to avoid warnings.
- Fixed: Mistakes in language strings.
- Fixed: Problem with the login form on small screens like mobile.
- Fixed: Show CoursePress Theme instructors box only when a course has at least one instructor.
- Fixed: Warnings on the "Grade" tab, when one of a module is a quiz.
- Fixed: Warnings when we use WooCommerce 3x.
- Improved: Added CoursePress version to export file.

= 2.1.4 =
-------------------------------------------------
* Fixed: Course certificate email settings were hidden for nonpremium users.
* Fixed: Discussion layout issue.
* Fixed: Missing new instructor on instructors list.
* Fixed: On a course structure show section without modules if "Show units without modules" is checked.
* Fixed: PHP notices when try to edit not exited unit.
* Fixed: Problem with display course sub-menu on the frontend.
* Fixed: Show unit progress on admin panel.
* Fixed: There was no ability to remove instructor.
* Fixed: Typo in notifications configuration.
* Fixed: Typo in MarketPress integration box.
* Improved: Added filters to get_time_estimation() functions: coursepress_course_get_time_estimation, coursepress_unit_get_time_estimation, coursepress_module_get_time_estimation.
* Improved: Prevent save units before fetching all data.
* Improved: Force recalculate number of courses on Instructors Screen.
* Improved: Prevent saves units before fetching all data.

= 2.1.3 =
-------------------------------------------------